--- a/about.html
+++ b/about.html
@@ -4,19 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Boba Bliss</title>
+  <title>About | Boba Bliss</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <header>
     <div class="container">
-      <h1>Boba Bliss</h1>
-      <p>Discover the Joy of Bubble Tea</p>
+      <h1>About Boba Bliss</h1>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="about.html" class="active">About</a></li>
           <li><a href="flavors.html">Flavors</a></li>
           <li><a href="gallery.html">Gallery</a></li>
         </ul>
@@ -25,10 +24,9 @@
   </header>
 
   <main>
-    <section class="hero">
-      <h2>Welcome to Boba Bliss</h2>
-      <p>Experience the finest bubble tea from around the world.</p>
-      <a href="about.html" class="btn">Learn More</a>
+    <section>
+      <h2>Our Story</h2>
+      <p>Boba Bliss was founded with a passion for sharing the love of bubble tea. Originating from Taiwan, bubble tea has become a global sensation.</p>
     </section>
   </main>
 
