--- a/flavors.html
+++ b/flavors.html
@@ -4,20 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Boba Bliss</title>
+  <title>Flavors | Boba Bliss</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <header>
     <div class="container">
-      <h1>Boba Bliss</h1>
-      <p>Discover the Joy of Bubble Tea</p>
+      <h1>Our Flavors</h1>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="flavors.html">Flavors</a></li>
+          <li><a href="flavors.html" class="active">Flavors</a></li>
           <li><a href="gallery.html">Gallery</a></li>
         </ul>
       </nav>
@@ -25,10 +24,15 @@
   </header>
 
   <main>
-    <section class="hero">
-      <h2>Welcome to Boba Bliss</h2>
-      <p>Experience the finest bubble tea from around the world.</p>
-      <a href="about.html" class="btn">Learn More</a>
+    <section>
+      <h2>Popular Flavors</h2>
+      <ul class="flavors-list">
+        <li>Classic Milk Tea</li>
+        <li>Taro Milk Tea</li>
+        <li>Matcha Green Tea</li>
+        <li>Strawberry Fruit Tea</li>
+        <li>Mango Milk Tea</li>
+      </ul>
     </section>
   </main>
 
