done w boba pt2

--- a/index.html
+++ b/index.html
@@ -1,40 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Boba Bliss</title>
   <link rel="stylesheet" href="style.css">
+  <title>Boba Bliss</title>
 </head>
-
 <body>
   <header>
-    <div class="container">
-      <h1>Boba Bliss</h1>
-      <p>Discover the Joy of Bubble Tea</p>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="flavors.html">Flavors</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
-        </ul>
-      </nav>
-    </div>
+    <h1>Welcome to Boba Bliss</h1>
+    <p>Discover the delightful world of boba tea!</p>
+    <nav>
+      <ul>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="flavors.html">Flavors</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <main>
-    <section class="hero">
-      <h2>Welcome to Boba Bliss</h2>
-      <p>Experience the finest bubble tea from around the world.</p>
-      <a href="about.html" class="btn">Learn More</a>
-    </section>
-  </main>
+  <section class="hero">
+    <h2>Experience the Best Boba in Town</h2>
+    <p>Crafted with love and the finest ingredients. Taste the difference!</p>
+    <a href="flavors.html" class="btn">Explore Flavors</a>
+    <div class="hero-image">
+      <img src="https://www.google.com/imgres?q=delicious%20boba%20tea&imgurl=https%3A%2F%2Fbubblepanda.com%2Fcdn%2Fshop%2Farticles%2Fbubble-tea-ingredients.jpg%3Fv%3D1711384428&imgrefurl=https%3A%2F%2Fbubblepanda.com%2Fblogs%2Fblog%2Fbehind-the-bubbles-unveiling-the-secret-ingredients-of-bubble-tea&docid=3lDTSAw5vEm8aM&tbnid=uxV0KdgArwi5NM&vet=12ahUKEwjz4_PvnoeKAxW-FlkFHXQSHSoQM3oECBUQAA..i&w=1000&h=667&hcb=2&ved=2ahUKEwjz4_PvnoeKAxW-FlkFHXQSHSoQM3oECBUQAA" alt="Delicious Boba Tea">
+    </div>
+  </section>
 
   <footer>
-    <p>&copy; 2024 Boba Bliss. All rights reserved.</p>
+    <p>&copy; 2024 Boba Bliss | Designed with ❤</p>
   </footer>
 </body>
-
 </html>
